Boardgame/k8s/base/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapps
  labels:
    name: webapps
