Boardgame/k8s/base/09-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boardgame-service
  namespace: webapps
  labels:
    app: boardgame
spec:
  type: ClusterIP
  selector:
    app: boardgame
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  sessionAffinity: None
  publishNotReadyAddresses: false
